<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">meteocool</string>
    <string name="notifications_admin_channel_name">meteocool</string>
    <string name="notifications_admin_channel_description">meteocool</string>
    <string name="notifications_admin_channel_id">meteocool</string>
    <string name="default_notification_channel_id">meteocool</string>

    <string name="onboarding_title1">Servus!</string>
    <string name="onboarding_title2">Sturmjäger/in oder Couchpotatoe?</string>
    <string name="onboarding_title3">Benachrichtigungen</string>
    <string name="onboarding_title4">Standort</string>
    <string name="onboarding_title5">Geh raus und genieß die Sonne!</string>

    <string name="onboarding_description1">Kein Regenradar wie jedes andere. Es ist werbefrei und kostenlos.
    </string>
    <string name="onboarding_description2">Informiere dich über die aktuelle und zukünftige Lage der Regenwolken und
        Gewitter.
    </string>
    <string name="onboarding_description3">Lasse dich durch Push-Nachrichten über kommenden Niederschlag informieren.
    </string>
    <string name="onboarding_description4">Aktiviere jetzt deinen Standortzugriff, um Push-Nachrichten zu erhalten.
    </string>
    <string name="onboarding_description5">Erzähle es deinen Bekannten und gib uns Feedback!</string>

    <string name="gps_button_toast">Schlechtes GPS-Signal.</string>
    <string name="title_activity_settings">Einstellungen</string>


    <string name="menu_documentation">Dokumentation</string>


    <!-- Preference Titles -->
    <string name="notification_header">Benachrichtigungen</string>
    <string name="map_header">Karte</string>

    <!-- Push Preferences -->
    <string name="notification_push_title">Push-Nachrichten</string>
    <string name="notification_push_level_title">Level der Benachrichtigung</string>
    <string name="level_drizzle">Nieseln</string>
    <string name="level_rain">Regen</string>
    <string name="level_heavy_rain">Starker Regen</string>
    <string name="level_hail">Hagel</string>

    <string name="notification_time_title">Benachrichtigungszeit</string>


    <!-- Map Preferences -->
    <string name="map_zoom_title">Zoom nach Start</string>
    <string name="map_rotate_title">Rotation der Karte</string>
    <string name="map_mode_title">Nachtmodus</string>

</resources>
